@@ -1,5 +1,7 @@
 * enhancements
+  * Added Registerable
   * Added Http Basic Authentication support
+  * Allow scoped_views to be customized per controller/mailer class
 
 == 0.9.2
 
